# nerf-keras-jax

./: README.md  pyproject.toml  train.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
nerf_keras_jax/: callback.py  config.py  dataset.py  model.py
notebooks/: nerf.ipynb
